cluster/apps/networking/traefik/whoami/ingress_route_whoami.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami-ir.${SECRET_DOMAIN}`)
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: security
      services:
        - name: whoami
          port: 80
